Avoid wrapping in sidebar links and buttons
Fix #400

--- a/ui/less/com/sidenavs.less
+++ b/ui/less/com/sidenavs.less
@@ -1,6 +1,6 @@
 .sidenav {
-  width: 175px;
-  flex: 0 0 175px;
+  width: 200px;
+  flex: 0 0 200px;
 
   .logo {
     font-size: 28px;
@@ -33,6 +33,7 @@
   .link {
     border-left: 5px solid transparent;
     padding-left: 5px;
+    white-space: nowrap;
     a, .expander {
       display: inline-block;
       padding: 5px 3px;
